# holistic-divination

./: .gitignore  CONTRIBUTING.md  README.md  build.sh
.github/workflows/: build.yml  build_fixed.yml
core/: .eslintrc.json  .prettierrc  package.json  tsconfig.json
core/src/: index.ts
core/src/__tests__/: boundary.test.ts  cross-module.test.ts  error-handling.test.ts  key-generator.test.ts  lunar-calendar.test.ts  performance.test.ts  scenarios.test.ts  six-layer-engine.test.ts
core/src/collection/: holistic-collector.ts
core/src/data/: classics-data.ts  hexagram-classics.ts  index.ts  types.ts
core/src/engine/: key-generator.ts  six-layer-engine.ts
core/src/inference/: ai-engine.ts  config.ts  local-engine.ts
core/src/utils/: lunar-calendar.ts  true-solar-time.ts
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.vue  main.ts  style.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src/router/: index.ts
desktop/src/stores/: divination.ts
desktop/src/views/: DivinationView.vue  HistoryView.vue  HomeView.vue  ResultView.vue  SettingsView.vue
docs/: ARCHITECTURE.md  INSTALL.md
mobile/: App.vue  main.ts  package.json
mobile/components/: TabBar.vue
mobile/pages/collection/: collection.vue
mobile/pages/history/: history.vue
mobile/pages/index/: index.vue
mobile/pages/result/: result.vue
mobile/pages/settings/: settings.vue
scripts/: multi-round-test.ts
