[package]
name = "holistic-divination"
version = "1.0.0"
description = "全息人本古法卜算系统"
authors = ["Holistic Divination"]
edition = "2021"

[lib]
name = "holistic_divination_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
